--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,8 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
-
-  - title: "Papers"
-    url: "/#-papers"
+  - title: "Publications"
+    url: "/#-publications"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
@@ -18,5 +15,8 @@ main:
   - title: "Technical Skills"
     url: "/#-technical-skills"
 
-  - title: "Internships"
-    url: "/#-internships"
+  - title: "Professional Experience"
+    url: "/#-professional-experience"
+
+  - title: "Links"
+    url: "/#-links"
