--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Ruifeng Ma | 马瑞峰"
 description              : "Focusing on cloud resource management and Machine Learning Operations. "
-repository               : "RayeRen/acad-homepage.github.io"
+# repository               : "RayeRen/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -23,7 +23,7 @@ baidu_site_verification  :  codeva-odOAq8hvdt # get baidu_site_verification from
 author:
   name             : "Ruifeng Ma (马瑞峰)"
   avatar           : "images/avatar.jpeg"
-  bio              : "Beijing Institute of Technology"
+  bio              : "Beijing Institute of Technology (北京理工大学)"
   location         : "Beijing, China"
   employer         :
   pubmed           : 
