--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Ruifeng Ma | 马瑞峰"
-description              : "Focusing on cloud resource management and Machine Learning Operations. "
+description              : "Post-graduate student at Beijing Institute of Technology (北京理工大学). Focusing on Machine Learning Operations (MLOps)."
 # repository               : "RayeRen/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
